footer css update links do not open in new tab now

--- a/src/foodfiesta/index.html
+++ b/src/foodfiesta/index.html
@@ -50,7 +50,7 @@
     <nav>
       <input id="nav-toggle" type="checkbox" />
       <div class="logo-wrapper">
-        <a href="https://www.shahandanchor.com/home/" target="_blank">
+        <a href="https://www.shahandanchor.com/home/" target="_self">
           <img
             src="../common/img/sakec_logo_WHITE.webp"
             alt="logo"
@@ -171,7 +171,7 @@
         <div class="jury1">
           <a
             href="https://instagram.com/flavours101___?igshid=YmMyMTA2M2Y="
-            target="_blank"
+            target="_self"
             ><img src="./asset/img/jury-img/2.webp" alt="" />
           </a>
 
@@ -180,7 +180,7 @@
           <a
             class="jinsta"
             href="https://instagram.com/flavours101___?igshid=YmMyMTA2M2Y="
-            target="_blank"
+            target="_self"
             ><i class="bi bi-instagram"></i> flavours101___</a
           >
 
@@ -196,7 +196,7 @@
         <div class="jury1">
           <a
             href="https://instagram.com/chieffoodieofficer?igshid=YmMyMTA2M2Y="
-            target="_blank"
+            target="_self"
             ><img src="./asset/img/jury-img/1.webp" alt=""
           /></a>
 
@@ -205,7 +205,7 @@
           <a
             class="jinsta"
             href="https://instagram.com/chieffoodieofficer?igshid=YmMyMTA2M2Y="
-            target="_blank"
+            target="_self"
             ><i class="bi bi-instagram"></i> chieffoodieofficer</a
           >
           <p>
@@ -220,7 +220,7 @@
         <div class="jury1">
           <a
             href="https://instagram.com/flavours101___?igshid=YmMyMTA2M2Y="
-            target="_blank"
+            target="_self"
             ><img src="./asset/img/jury-img/3.webp" alt=""
           /></a>
 
@@ -229,7 +229,7 @@
           <a
             class="jinsta"
             href="https://instagram.com/flavours101___?igshid=YmMyMTA2M2Y="
-            target="_blank"
+            target="_self"
             ><i class="bi bi-instagram"></i> flavours101___</a
           >
           <p>
@@ -655,15 +655,26 @@
       <div class="footer-wrapper">
         <div class="footer-container">
           <div class="about-us-wrapper">
-            <img src="../common/img/e_cell_logo_WHITE.webp" alt="ecell-logo" class="footer-ecell-logo">
-            <div class="footer-about-text">E-CELL SAKEC strongly believes in industriousness to bring prosperity. Our aim is to help students become vivacious entrepreneurs and lead their ideas into successful business ventures. </div>
+            <img
+              src="../common/img/e_cell_logo_WHITE.webp"
+              alt="ecell-logo"
+              class="footer-ecell-logo"
+            />
+            <div class="footer-about-text">
+              E-CELL SAKEC strongly believes in industriousness to bring
+              prosperity. Our aim is to help students become vivacious
+              entrepreneurs and lead their ideas into successful business
+              ventures.
+            </div>
           </div>
           <div class="quick-links-wrapper">
             <div class="footer-heading">Quick Links</div>
             <div class="links-wrapper">
               <a href="../index.html#home" class="quick-link">Home</a>
               <a href="../index.html#about" class="quick-link">About Us</a>
-              <a href="../index.html#objective" class="quick-link">Objectives</a>
+              <a href="../index.html#objective" class="quick-link"
+                >Objectives</a
+              >
               <a href="../events/index.html" class="quick-link">Events</a>
               <a href="../team/index.html" class="quick-link">Our Team</a>
               <a href="../faq/index.html" class="quick-link">FAQ</a>
@@ -703,7 +714,7 @@
                 <a
                   class="social-media-cont"
                   href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-instagram"></i>
@@ -711,7 +722,7 @@
                 <a
                   class="social-media-cont"
                   href="https://m.facebook.com/100410025256433/"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <!-- <a href=""></a> -->
@@ -720,7 +731,7 @@
                 <a
                   class="social-media-cont"
                   href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-youtube"></i>
@@ -728,7 +739,7 @@
                 <a
                   class="social-media-cont"
                   href="https://www.linkedin.com/showcase/e-cell-sakec"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-linkedin"></i>
