--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
       <div class="logo-wrapper">
         <a
           href="https://www.shahandanchor.com/home/"
-          target="_blank"
+          target="_self"
           rel="noopener noreferrer"
         >
           <img
@@ -362,7 +362,7 @@
           <p></p>
           <a
             href="https://register.ecellsakec.in"
-            target="_blank"
+            target="_self"
             rel="noopener noreferrer"
           >
             <button class="button" style="color: #000">JOIN US</button>
@@ -375,8 +375,17 @@
       <div class="footer-wrapper">
         <div class="footer-container">
           <div class="about-us-wrapper">
-            <img src="./common/img/e_cell_logo_WHITE.webp" alt="ecell-logo" class="footer-ecell-logo">
-            <div class="footer-about-text">E-CELL SAKEC strongly believes in industriousness to bring prosperity. Our aim is to help students become vivacious entrepreneurs and lead their ideas into successful business ventures. </div>
+            <img
+              src="./common/img/e_cell_logo_WHITE.webp"
+              alt="ecell-logo"
+              class="footer-ecell-logo"
+            />
+            <div class="footer-about-text">
+              E-CELL SAKEC strongly believes in industriousness to bring
+              prosperity. Our aim is to help students become vivacious
+              entrepreneurs and lead their ideas into successful business
+              ventures.
+            </div>
           </div>
           <div class="quick-links-wrapper">
             <div class="footer-heading">Quick Links</div>
@@ -423,7 +432,7 @@
                 <a
                   class="social-media-cont"
                   href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-instagram"></i>
@@ -431,7 +440,7 @@
                 <a
                   class="social-media-cont"
                   href="https://m.facebook.com/100410025256433/"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <!-- <a href=""></a> -->
@@ -440,7 +449,7 @@
                 <a
                   class="social-media-cont"
                   href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-youtube"></i>
@@ -448,7 +457,7 @@
                 <a
                   class="social-media-cont"
                   href="https://www.linkedin.com/showcase/e-cell-sakec"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-linkedin"></i>
