--- a/src/projectpillar/index.html
+++ b/src/projectpillar/index.html
@@ -30,7 +30,7 @@
           <div style="display: flex; gap: 0 2em">
             <!-- SAKEC_LOGO_WHITE -->
             <div class="logo">
-              <a href="https://www.shahandanchor.com/home/" target="_blank">
+              <a href="https://www.shahandanchor.com/home/" target="_self">
                 <img
                   src="../common/img/sakec_logo_BLACK.webp"
                   alt="sakec ecell logo"
@@ -72,7 +72,7 @@
             <a
               id="nav-a"
               href="./faq/index.html"
-              target="_blank"
+              target="_self"
               rel="noopener noreferrer"
               >FAQ</a
             >
@@ -604,7 +604,7 @@
                 <a
                   class="social-media-cont"
                   href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-instagram"></i>
@@ -612,7 +612,7 @@
                 <a
                   class="social-media-cont"
                   href="https://m.facebook.com/100410025256433/"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <!-- <a href=""></a> -->
@@ -621,7 +621,7 @@
                 <a
                   class="social-media-cont"
                   href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-youtube"></i>
@@ -629,7 +629,7 @@
                 <a
                   class="social-media-cont"
                   href="https://www.linkedin.com/showcase/e-cell-sakec"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-linkedin"></i>
