--- a/src/events/index.html
+++ b/src/events/index.html
@@ -30,7 +30,7 @@
     <nav>
       <input id="nav-toggle" type="checkbox" />
       <div class="logo-wrapper">
-        <a href="https://www.shahandanchor.com/home/" target="_blank">
+        <a href="https://www.shahandanchor.com/home/" target="_self">
           <img
             src="../common/img/sakec_logo_BLACK.webp"
             alt="logo"
@@ -94,7 +94,7 @@
           <a
             href="../projectpillar/index.html"
             class="sharktank_cta"
-            target="_blank"
+            target="_self"
             >Read more</a
           >
         </div>
@@ -120,7 +120,7 @@
           <a
             href="../foodfiesta/index.html"
             class="FoodFiesta_cta"
-            target="_blank"
+            target="_self"
             >Read more</a
           >
         </div>
@@ -142,7 +142,7 @@
             ideal selves.
           </p>
 
-          <a href="../podcast/index.html" class="podcast_cta" target="_blank"
+          <a href="../podcast/index.html" class="podcast_cta" target="_self"
             >Read more</a
           >
         </div>
@@ -199,15 +199,24 @@
       <div class="footer-wrapper">
         <div class="footer-container">
           <div class="about-us-wrapper">
-            <img src="../common/img/e_cell_logo_WHITE.webp" alt="ecell-logo" class="footer-ecell-logo">
-            <div class="footer-about-text">E-CELL SAKEC strongly believes in industriousness to bring prosperity. Our aim is to help students become vivacious entrepreneurs and lead their ideas into successful business ventures. </div>
+            <img
+              src="../common/img/e_cell_logo_WHITE.webp"
+              alt="ecell-logo"
+              class="footer-ecell-logo"
+            />
+            <div class="footer-about-text">
+              E-CELL SAKEC strongly believes in industriousness to bring
+              prosperity. Our aim is to help students become vivacious
+              entrepreneurs and lead their ideas into successful business
+              ventures.
+            </div>
           </div>
           <div class="quick-links-wrapper">
             <div class="footer-heading">Quick Links</div>
             <div class="links-wrapper">
-              <a href="../index.html#home" class="quick-link">Home</a>
-              <a href="../index.html#about" class="quick-link">About Us</a>
-              <a href="../index.html#objective" class="quick-link">Objectives</a>
+              <a href="#home" class="quick-link">Home</a>
+              <a href="#about" class="quick-link">About Us</a>
+              <a href="#objective" class="quick-link">Objectives</a>
               <a href="../events/index.html" class="quick-link">Events</a>
               <a href="../team/index.html" class="quick-link">Our Team</a>
               <a href="../faq/index.html" class="quick-link">FAQ</a>
@@ -247,7 +256,7 @@
                 <a
                   class="social-media-cont"
                   href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-instagram"></i>
@@ -255,7 +264,7 @@
                 <a
                   class="social-media-cont"
                   href="https://m.facebook.com/100410025256433/"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <!-- <a href=""></a> -->
@@ -264,7 +273,7 @@
                 <a
                   class="social-media-cont"
                   href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-youtube"></i>
@@ -272,7 +281,7 @@
                 <a
                   class="social-media-cont"
                   href="https://www.linkedin.com/showcase/e-cell-sakec"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-linkedin"></i>
