--- a/src/podcast/index.html
+++ b/src/podcast/index.html
@@ -67,7 +67,7 @@
       <div class="logo-wrapper">
         <a
           href="https://www.shahandanchor.com/home/"
-          target="_blank"
+          target="_self"
           rel="noopener noreferrer"
         >
           <img
@@ -419,7 +419,7 @@
               <a
                 class="social-media-cont"
                 href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <i class="bi bi-instagram"></i>
@@ -427,7 +427,7 @@
               <a
                 class="social-media-cont"
                 href="https://m.facebook.com/100410025256433/"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <!-- <a href=""></a> -->
@@ -436,7 +436,7 @@
               <a
                 class="social-media-cont"
                 href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <i class="bi bi-youtube"></i>
@@ -444,7 +444,7 @@
               <a
                 class="social-media-cont"
                 href="https://www.linkedin.com/showcase/e-cell-sakec"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <i class="bi bi-linkedin"></i>
