--- a/src/projectpillar/faq/index.html
+++ b/src/projectpillar/faq/index.html
@@ -26,7 +26,7 @@
   <nav>
     <input id="nav-toggle" type="checkbox">
     <div class="logo-wrapper">
-      <a href="https://www.shahandanchor.com/home/" target="_blank">
+      <a href="https://www.shahandanchor.com/home/" target="_self">
         <img src="../../common/img/sakec_logo_BLACK.webp" alt="logo" class="logo  sakec-logo">
       </a>
       <a href="../../index.html">
@@ -321,7 +321,7 @@
               <a
                 class="social-media-cont"
                 href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <i class="bi bi-instagram"></i>
@@ -329,7 +329,7 @@
               <a
                 class="social-media-cont"
                 href="https://m.facebook.com/100410025256433/"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <!-- <a href=""></a> -->
@@ -338,7 +338,7 @@
               <a
                 class="social-media-cont"
                 href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <i class="bi bi-youtube"></i>
@@ -346,7 +346,7 @@
               <a
                 class="social-media-cont"
                 href="https://www.linkedin.com/showcase/e-cell-sakec"
-                target="_blank"
+                target="_self"
                 rel="noopener noreferrer"
               >
                 <i class="bi bi-linkedin"></i>
