--- a/src/team/index.html
+++ b/src/team/index.html
@@ -21,7 +21,7 @@
     <nav>
         <input id="nav-toggle" type="checkbox">
         <div class="logo-wrapper">
-            <a href="https://www.shahandanchor.com/home/" target="_blank">
+            <a href="https://www.shahandanchor.com/home/" target="_self">
                 <img src="../common/img/sakec_logo_BLACK.webp" alt="logo" class="logo  sakec-logo">
             </a>
             <a href="../index.html">
@@ -450,7 +450,7 @@
                 <a
                   class="social-media-cont"
                   href="https://instagram.com/ecellsakec?igshid=YmMyMTA2M2Y"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-instagram"></i>
@@ -458,7 +458,7 @@
                 <a
                   class="social-media-cont"
                   href="https://m.facebook.com/100410025256433/"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <!-- <a href=""></a> -->
@@ -467,7 +467,7 @@
                 <a
                   class="social-media-cont"
                   href="https://youtube.com/channel/UCX5-UquwzBkftEEtLlJQyeQ"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-youtube"></i>
@@ -475,7 +475,7 @@
                 <a
                   class="social-media-cont"
                   href="https://www.linkedin.com/showcase/e-cell-sakec"
-                  target="_blank"
+                  target="_self"
                   rel="noopener noreferrer"
                 >
                   <i class="bi bi-linkedin"></i>
