harsh email addded to footer

--- a/src/faq/index.html
+++ b/src/faq/index.html
@@ -346,6 +346,14 @@
                     >bhumika.thanvi15931@sakec.ac.in</a
                   >
                 </div>
+                <div class="email-link">
+                  <i class="bi bi-envelope-fill"></i>
+                  <a
+                    class="email-link"
+                    href="mailto:harsh.patadia_19@sakec.ac.in"
+                    >harsh.patadia_19@sakec.ac.in</a
+                  >
+                </div>
               </div>
             </div>
             <div class="follow-us-wrapper">
