--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,8 @@
         <li><a href="./events/index.html">Events </a></li>
         <li><a href="#about">About Us </a></li>
         <li><a href="#objective">Objectives</a></li>
-
-        <li><a href="#testimony">Testimony</a></li>
+        <li><a href="./FF2023/ff2023.html">FF2023</a></li>
+        <li><a href="#testimoy">Testimony</a></li>
         <li><a href="#contactus">Contact Us </a></li>
         <li><a href="./team/index.html">Our Team</a></li>
         <li><a id="nav-a" href="./faq/index.html">FAQ</a></li>
