--- a/src/FF2023/ff2023.html
+++ b/src/FF2023/ff2023.html
@@ -56,7 +56,7 @@
     <div class="fhero">
         <div> 
             <img src="./assets/images/FFLOGO.png" alt="Food fiesta logo"/>
-            <h1 >THE REAL<br> TASTE OF INDIA</h1>
+            <div class="herotitle"><h1 >THE REAL<br> TASTE OF INDIA</h1></div>
             <h2>Food Fiesta is an annual event organized by E-Cell to promote entrepreneurship and <br>
                  provide students with business exposure.For just one day, participants put up a stall.<br>
                   It gives them a glimpse of all the challenges they would encounter as a business.<br>
@@ -96,9 +96,9 @@
 
 
 
-    <section class="winner" id="winner">
+    <section class="spon" id="spon">
 
-      <div class="wintitle">   
+      <div class="spontitle">   
             <h1>Our Sponsors</h1> </div>
             <div class="spon-wrap">
               <div class="spon-in">
@@ -106,21 +106,21 @@
                   <li>
                     <a
                       ><img
-                        src="./assets/images/FFLOGO.png"
+                        src="../foodfiesta/asset/img/logos/spon-logo/Copy_of_Millionaire_Kids_Club_2.png"
                         alt=""
                     /></a>
                   </li>
                   <li>
                     <a
                       ><img
-                      src="./assets/images/FFLOGO.png"
+                      src="../foodfiesta/asset/img/logos/spon-logo/logo2.png"
                         alt=""
                       />
                     </a>
                   </li>
                   <li>
                     <a
-                      ><img src="./assets/images/FFLOGO.png" alt="" />
+                      ><img src="../projectpillar/src/assets/icon/chembur74_web.webp" alt="" />
                     </a>
                   </li>
                 </ul>
