--- a/src/index.html
+++ b/src/index.html
@@ -170,8 +170,8 @@
           <div class="card-details">
             <h4>Awareness</h4>
             <p>
-              To raise cognizance amongst the student members regarding the
-              entrepreneurship sector and its practices.
+              To create awareness for entrepreneurial career amongst the staff
+              and students
             </p>
           </div>
         </div>
@@ -188,8 +188,8 @@
           <div class="card-details">
             <h4>Motivation</h4>
             <p>
-              To cultivate a mindset that facilitates persistent goal-directed
-              behavioural patterns and vitality in the workplace.
+              To motivate the students to start businesses that are of high
+              societal relevance and based on innovation.
             </p>
           </div>
         </div>
@@ -207,8 +207,10 @@
             <h4>Mentorship</h4>
 
             <p>
-              To provide the conditions for affluent and expert advice to be
-              given by a trustworthy advisor.
+              To guide the staff and students during different phases of
+              starting their business like raising capital for business, its
+              registration, obtaining different clearances from the Government,
+              product development, sales, marketing, etc.
             </p>
           </div>
         </div>
@@ -225,9 +227,27 @@
           <div class="card-details">
             <h4>Incubation Centre</h4>
             <p>
-              To provide start-ups with technical assistance, infrastructure,
-              and a variety of other resources that may be needed for the
-              start-up to survive and scale.
+              To support the startups initiated by the staff and students
+              through the incubation center till they become strong enough to
+              sustain in the market.
+            </p>
+          </div>
+        </div>
+        <!-- Guidance -->
+        <div class="cards">
+          <div class="objective-img-cont">
+            <img
+              src="./src/assets/images/icons8-creative-64.png"
+              alt=""
+              height="100%"
+              width="100%"
+            />
+          </div>
+          <div class="card-details">
+            <h4>Innovate</h4>
+            <p>
+              To create the culture of innovation and creative problem solving
+              in the Institute.
             </p>
           </div>
         </div>
