--- a/src/events/index.html
+++ b/src/events/index.html
@@ -118,7 +118,7 @@
           </p>
 
           <a
-            href="../foodfiesta/index.html"
+            href="../FF2023/ff2023.html"
             class="FoodFiesta_cta"
             target="_self"
             >Read more</a
