--- a/src/FF2023/ff2023.html
+++ b/src/FF2023/ff2023.html
@@ -189,7 +189,7 @@
 
     <section class="register">
         <div class="regcontainer">
-            <img class="regimg" id="register" src="./assets/images/Register/registerstall.png">  
+            <img class="regimg" id="register" src="./assets/images/Register/stall 3.png">  
             <div class="button">
               <a href="https://www.shahandanchor.com/ce/food-fiesta/">Register Now</a>
             </div>           
