--- a/src/foodfiesta/index.html
+++ b/src/foodfiesta/index.html
@@ -69,6 +69,7 @@
 
     <ul class="links">
       <li><a href="../index.html#home">Home </a></li>
+      <li><a href="../events/index.html">Events </a></li>
       <li><a href="#judge">Our JUDGES</a></li>
       <li><a href="#register">Register Now </a></li>
       <li><a href="#zaika">Zaika</a></li>
