--- a/src/foodfiesta/index.html
+++ b/src/foodfiesta/index.html
@@ -180,10 +180,10 @@
   <section class="register">
     <div class="regcontainer">
       <img class="regimg" id="register" src="./assets/images/Register/stall 3.png">
-      <div class="button">
-        <a href="https://www.shahandanchor.com/ce/food-fiesta/">Register Now</a>
-      </div>
+        <h1 class="regclos">Registration Closed...</h1>
     </div>
+
+
     <div class="regseparator"></div>
   </section>
 
