--- a/src/foodfiesta/index.html
+++ b/src/foodfiesta/index.html
@@ -93,7 +93,7 @@
       <h2>Food Fiesta is an annual event organized by E-Cell to promote entrepreneurship and <br>
         provide students with business exposure.For just one day, participants put up a stall.<br>
         It gives them a glimpse of all the challenges they would encounter as a business.<br>
-        It offers a platform to pitch and sell your food products ass a one-on-one business individual.</h2>
+        It offers a platform to pitch and sell your food products as a one-on-one business individual.</h2>
     </div>
     <div class="separator"></div>
   </div>
